syntax = "proto3";

package notification;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

service NotificationServices {
    rpc CreateDeviceToken(CreateDeviceTokenRequest) returns (google.protobuf.Empty);
}

message DeviceToken {
    string id = 1;
    string user_id = 2;
    string token = 3;
    google.protobuf.Timestamp created_at = 4;
    google.protobuf.Timestamp updated_at = 5;
}

message CreateDeviceTokenRequest {
    DeviceToken data = 1;
}